--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sqlbi.igc.edu.vn,60002;Database=SurveyForm;User Id=Mnsa;Password=IGC@2024!!@@#;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
