--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,5 +9,15 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:53751"
+      },
+      "Https": {
+        "Url": "https://localhost:53750"
+      }
+    }
   }
 }
