--- a/web.config
+++ b/web.config
@@ -2,7 +2,11 @@
 <configuration>
   <location path="." inheritInChildApplications="false">
     <system.webServer>
+      <modules>
+        <remove name="WebDAVModule" />
+      </modules>
       <handlers>
+        <remove name="WebDAV" />
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="dotnet" arguments=".\surveyjs-aspnet-mvc.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" hostingModel="inprocess">
@@ -10,6 +14,14 @@
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
         </environmentVariables>
       </aspNetCore>
+      <rewrite>
+        <rules>
+          <rule name="API Routes" stopProcessing="true">
+            <match url="^api/.*" />
+            <action type="Rewrite" url="/" />
+          </rule>
+        </rules>
+      </rewrite>
     </system.webServer>
   </location>
 </configuration>
