--- a/web.config
+++ b/web.config
@@ -17,7 +17,7 @@
       <rewrite>
         <rules>
           <rule name="API Routes" stopProcessing="true">
-            <match url="^api/.*" />
+            <match url="^asp/.*" />
             <action type="Rewrite" url="/" />
           </rule>
         </rules>
